--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,40 +1,71 @@
-name: Build and Package Go Binary
+name: Build and Release
 
 on:
   push:
+    tags:
+      - 'v*'
     branches:
-      - main  # 当推送到主分支时触发
-  pull_request:
-    branches:
-      - main  # 当有拉取请求合并到主分支时触发
+      - main
+
+permissions:
+  contents: write  # 允许工作流创建 releases
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # 使用最新的 Ubuntu 运行环境
-
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2  # 拉取代码
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v3  # 设置 Go 环境
-      with:
-        go-version: '1.20'  # 使用 Go 1.20 或根据需要修改版本
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.21'
 
-    - name: Install dependencies
-      run: go mod tidy  # 安装 Go 依赖项
+      - name: Get version
+        id: get_version
+        run: |
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          else
+            echo "VERSION=dev-$(date +%Y%m%d)" >> $GITHUB_ENV
+          fi
 
-    - name: Build Go project
-      run: |
-        go build -o traffic-monitor  # 编译 Go 项目并生成二进制文件 traffic-monitor
+      - name: Build binaries
+        run: |
+          rm -rf release
+          mkdir -p release
+          
+          # 设置正确的模块路径
+          go mod tidy
+          
+          # Linux AMD64
+          GOOS=linux GOARCH=amd64 go build -v -o release/traffic-monitor-amd64 .
+          cd release && tar -czvf "traffic-monitor-amd64-$VERSION.tar.gz" traffic-monitor-amd64 && cd ..
+          
+          # Linux 386
+          GOOS=linux GOARCH=386 go build -v -o release/traffic-monitor-386 .
+          cd release && tar -czvf "traffic-monitor-386-$VERSION.tar.gz" traffic-monitor-386 && cd ..
+          
+          # Linux ARM
+          GOOS=linux GOARCH=arm go build -v -o release/traffic-monitor-arm .
+          cd release && tar -czvf "traffic-monitor-arm-$VERSION.tar.gz" traffic-monitor-arm && cd ..
+          
+          # Linux ARM64
+          GOOS=linux GOARCH=arm64 go build -v -o release/traffic-monitor-arm64 .
+          cd release && tar -czvf "traffic-monitor-arm64-$VERSION.tar.gz" traffic-monitor-arm64 && cd ..
 
-    - name: Package binary
-      run: |
-        tar -czvf traffic-monitor.tar.gz traffic-monitor  # 将二进制文件压缩为 .tar.gz 格式
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: binaries
+          path: release/*.tar.gz
 
-    - name: Upload binary as artifact
-      uses: actions/upload-artifact@v2  # 上传压缩包
-      with:
-        name: traffic-monitor  # 给上传的文件起个名字
-        path: traffic-monitor.tar.gz  # 上传的文件路径
-
+      - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          files: release/*.tar.gz
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
